[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
color-eyre = "0.6.3"
eyre = "0.6.12"
info_utils = "2.2.3"
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "migrate", "tls-rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
