[package]
name = "chela"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["tokio"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
hyper = "1.2.0"
hyper-util = { version = "0.1.3", features = ["tokio"] }
info_utils = "2.2.3"
serde = "1.0.197"
sqids = "0.4.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "migrate", "tls-rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
url = { version = "2.5.0", features = ["serde"] }
